RESOLVED FIXED45245
[Qt] fix uri/escaped-entity.html
https://bugs.webkit.org/show_bug.cgi?id=45245
Summary [Qt] fix uri/escaped-entity.html
Robert Hogan
Reported 2010-09-05 14:06:06 PDT
Replace invalid encodings with the appropriate escaped entity. See also http://bugreports.qt.nokia.com/browse/QTBUG-13412
Attachments
Patch (4.24 KB, patch)
2010-09-06 11:23 PDT, Robert Hogan
no flags
Patch (4.23 KB, patch)
2010-09-26 04:22 PDT, Robert Hogan
no flags
Patch (4.23 KB, patch)
2010-09-26 05:58 PDT, Robert Hogan
no flags
Robert Hogan
Comment 1 2010-09-06 11:23:26 PDT
Andreas Kling
Comment 2 2010-09-25 06:38:58 PDT
Comment on attachment 66661 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=66661&action=review > WebCore/platform/text/qt/TextCodecQt.cpp:137 > + // FIXME: Until http://bugreports.qt.nokia.com/browse/QTBUG-13412 is resolved we need to this ourselves Note: It's unlikely that QTBUG-13412 will ever be implemented. > WebCore/platform/text/qt/TextCodecQt.cpp:146 > + for (int pos = 0; pos < length; ++pos) { Sign mismatch, pos should be size_t. I've discussed this with Olivier Goffart and we feel it's Good Enough(tm). Please fix the style before committing (tabs should be 4 spaces, not 2.)
Robert Hogan
Comment 3 2010-09-26 04:22:28 PDT
Robert Hogan
Comment 4 2010-09-26 05:58:54 PDT
WebKit Commit Bot
Comment 5 2010-09-26 06:12:20 PDT
Comment on attachment 68846 [details] Patch Clearing flags on attachment: 68846 Committed r68341: <http://trac.webkit.org/changeset/68341>
WebKit Commit Bot
Comment 6 2010-09-26 06:12:26 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.