2010-09-26  Robert Hogan  <robert@webkit.org>

Reviewed by Andreas Kling.

        [Qt] fix http/tests/uri/escaped-entity.html

        Replace invalid encodings with the appropriate escaped entity.

        See also http://bugreports.qt.nokia.com/browse/QTBUG-13412

        https://bugs.webkit.org/show_bug.cgi?id=45245

        * platform/qt/Skipped:
2010-09-26  Robert Hogan  <robert@webkit.org>

        Reviewed by Andreas Kling.

        [Qt] fix http/tests/uri/escaped-entity.html

        Replace invalid encodings with the appropriate escaped entity.

        See also http://bugreports.qt.nokia.com/browse/QTBUG-13412

        https://bugs.webkit.org/show_bug.cgi?id=45245

        * platform/text/qt/TextCodecQt.cpp:
        (WebCore::TextCodecQt::encode):

Canonical link: https://commits.webkit.org/59031@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@68341 268f45cc-cd09-0410-ab3c-d52691b4dbfc